Just added a comment

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -30,7 +30,7 @@
 body {
   padding-top: 80px;
 }
-/*same for responsive bootstrap
+/*same for responsive bootstrap, hm doesn't seem to do anything though
 */
 @media (max-width: 979px) {
   body {
