--- a/app/views/bids/_form.html.erb
+++ b/app/views/bids/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(bid) do |f| %>
+<%= form_for([auction, bid]) do |f| %>
   <% if bid.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(bid.errors.count, "error") %> prohibited this bid from being saved:</h2>
@@ -14,16 +14,6 @@
   <div class="field">
     <%= f.label :amount %>
     <%= f.number_field :amount %>
-  </div>
-
-  <div class="field">
-    <%= f.label :user %>
-    <%= f.text_field :user %>
-  </div>
-
-  <div class="field">
-    <%= f.label :auction %>
-    <%= f.text_field :auction %>
   </div>
 
   <div class="actions">
