--- a/app/views/bids/new.html.erb
+++ b/app/views/bids/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Bid</h1>
 
-<%= render 'form', bid: @bid %>
+<%= render 'form', auction: @auction, bid: @bid %>
 
-<%= link_to 'Back', bids_path %>
+<%= link_to 'Back', auction_path(@auction) %>
