--- a/app/views/bids/show.html.erb
+++ b/app/views/bids/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <p>
   <strong>Amount:</strong>
   <%= @bid.amount %>
@@ -16,4 +14,4 @@
 </p>
 
 <%= link_to 'Edit', edit_bid_path(@bid) %> |
-<%= link_to 'Back', bids_path %>
+<%= link_to 'Back', auction_path(auction: @bid.auction) %>
