Correction for show auction with no pic, fix for auction update with new pic, various model validations

--- a/app/views/auctions/_form.html.erb
+++ b/app/views/auctions/_form.html.erb
@@ -27,7 +27,7 @@
   </div>
 
 
-    <%= f.file_field :images, multiple: true, help: 'You can select multiple files. Attaching images can take a very long time.' %>
+    <%= f.file_field :images, multiple: true, help: 'Attaching images can a while.' %>
 
 
   <div class="actions">
