--- a/app/views/auctions/show.html.erb
+++ b/app/views/auctions/show.html.erb
@@ -28,7 +28,11 @@
 </p>
 
 <p>
-  <%= image_tag(@auction.images.first.imgur_link, width: 150)%>
+  <% if (@auction.images.first!=nil) %>
+      <%= image_tag(@auction.images.first.imgur_link, width: 150)%>
+  <% else %>
+      Currently no images available
+  <%end%>
 </p>
 
 <%= link_to 'Make bid', new_auction_bid_path(@auction) %> |
