--- a/app/views/bids/index.html.erb
+++ b/app/views/bids/index.html.erb
@@ -16,8 +16,8 @@
     <% @bids.each do |bid| %>
       <tr>
         <td><%= bid.amount %></td>
-        <td><%= bid.user %></td>
-        <td><%= bid.auction %></td>
+        <td><%= bid.user.email %></td>
+        <td><%= bid.auction.name %></td>
         <td><%= link_to 'Show', bid %></td>
         <td><%= link_to 'Edit', edit_bid_path(bid) %></td>
         <td><%= link_to 'Destroy', bid, method: :delete, data: { confirm: 'Are you sure?' } %></td>
