--- a/app/views/auctions/_form.html.erb
+++ b/app/views/auctions/_form.html.erb
@@ -1,24 +1,40 @@
-<%= form_for(auction) do |f| %>
-  <div class="field">
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-  </div>
+<%= form_for @auction, :html => { :class => "form-horizontal auction" } do |f| %>
 
-  <div class="field">
-    <%= f.label :description %>
-    <%= f.text_area :description %>
-  </div>
+    <div class="form-group">
+      <%= f.label :name, :class => 'control-label col-lg-2' %>
+      <div class="col-lg-10">
+        <%= f.text_field :name, :class => 'form-control' %>
+      </div>
+      <%=f.error_span(:name) %>
+    </div>
+    <div class="form-group">
+      <%= f.label :description, :class => 'control-label col-lg-2' %>
+      <div class="col-lg-10">
+        <%= f.text_area :description, :class => 'form-control' %>
+      </div>
+      <%=f.error_span(:description) %>
+    </div>
+    <div class="form-group">
+      <%= f.label :end_time, :class => 'control-label col-lg-2' %>
+      <div class="col-lg-10">
+        <%= f.datetime_select :end_time, :class => 'form-control' %>
+      </div>
+      <%=f.error_span(:end_time) %>
+    </div>
+    <div>
+      <hr>
+      <h4>Images</h4>
+      <%= f.file_field :images, multiple: true, help: 'You can select multiple files. Attaching images can take a very long time.'%>
+      </hr>
+    </div>
 
-  <div class="field">
-    <%= f.label :end_time %>
-    <%= f.datetime_select :end_time %>
-  </div>
 
+    <div class="form-group">
+      <div class="col-lg-offset-2 col-lg-10">
+        <%= f.submit nil, :class => 'btn btn-primary' %>
+        <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                    auctions_path, :class => 'btn btn-default' %>
+      </div>
+    </div>
 
-    <%= f.file_field :images, multiple: true, help: 'Attaching images can a while.' %>
-
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
 <% end %>
