--- a/app/views/auctions/index.html.erb
+++ b/app/views/auctions/index.html.erb
@@ -1,31 +1,40 @@
-<h1>Auctions</h1>
-
-<table>
+<%- model_class = Auction -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Active</th>
-      <th>End time</th>
-      <th colspan="3"></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:name) %></th>
+      <th><%= model_class.human_attribute_name(:active) %></th>
+      <th><%= model_class.human_attribute_name(:end_time) %></th>
+      <th><%= model_class.human_attribute_name(:user_id) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @auctions.each do |auction| %>
       <tr>
+        <td><%= link_to auction.id, auction_path(auction) %></td>
         <td><%= auction.name %></td>
-        <td><%= auction.description %></td>
         <td><%= auction.active %></td>
         <td><%= auction.end_time %></td>
-        <td><%= link_to 'Show', auction %></td>
-        <td><%= link_to 'Edit', edit_auction_path(auction) %></td>
-        <td><%= link_to 'Destroy', auction, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= auction.user.name %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_auction_path(auction), :class => 'btn btn-default btn-xs' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      auction_path(auction),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-xs btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Auction', new_auction_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_auction_path,
+            :class => 'btn btn-primary' %>
