--- a/app/views/auctions/new.html.erb
+++ b/app/views/auctions/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Auction</h1>
-
-<%= render 'form', auction: @auction %>
-
-<%= link_to 'Back', auctions_path %>
+<%- model_class = Auction -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
