--- a/app/views/bids/_form.html.erb
+++ b/app/views/bids/_form.html.erb
@@ -1,10 +1,34 @@
-<%= form_for([auction, bid]) do |f| %>
-  <div class="field">
-    <%= f.label :amount %>
-    <%= f.number_field :amount %>
+<%= form_for [@auction,@bid], :html => { :class => "form-horizontal bid" } do |f| %>
+
+  <% if @bid.errors.any? %>
+    <div id="error_expl" class="panel panel-danger">
+      <div class="panel-heading">
+        <h3 class="panel-title"><%= pluralize(@bid.errors.count, "error") %> prohibited this bid from being saved:</h3>
+      </div>
+      <div class="panel-body">
+        <ul>
+        <% @bid.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+      </div>
+    </div>
+  <% end %>
+
+  <div class="form-group">
+    <%= f.label :amount, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :amount, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:amount) %>
   </div>
 
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-group">
+    <div class="col-lg-offset-2 col-lg-10">
+      <%= f.submit nil, :class => 'btn btn-primary' %>
+      <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                bids_path, :class => 'btn btn-default' %>
+    </div>
   </div>
+
 <% end %>
