--- a/app/views/bids/edit.html.erb
+++ b/app/views/bids/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Bid</h1>
-
-<%= render 'form', bid: @bid %>
-
-<%= link_to 'Show', @bid %> |
-<%= link_to 'Back', bids_path %>
+<%- model_class = Bid -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
