--- a/app/views/bids/new.html.erb
+++ b/app/views/bids/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Bid</h1>
-
-<%= render 'form', auction: @auction, bid: @bid %>
-
-<%= link_to 'Back', auction_path(@auction) %>
+<%- model_class = Bid -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
