--- a/app/views/bids/show.html.erb
+++ b/app/views/bids/show.html.erb
@@ -1,17 +1,25 @@
-<p>
-  <strong>Amount:</strong>
-  <%= @bid.amount %>
-</p>
+<%- model_class = Bid -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>User:</strong>
-  <%= @bid.user %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:amount) %>:</strong></dt>
+  <dd><%= @bid.amount %></dd>
+  <dt><strong>Bid status:</strong></dt>
+  <dd><%= @bid.status %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:user_id) %>:</strong></dt>
+  <dd><%= link_to @bid.user.name, user_path(@bid.user) %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:auction_id) %>:</strong></dt>
+  <dd><%= link_to @bid.auction.name, user_path(@bid.auction) %></dd>
+</dl>
 
-<p>
-  <strong>Auction:</strong>
-  <%= @bid.auction %>
-</p>
-
-<%= link_to 'Edit', edit_bid_path(@bid) %> |
-<%= link_to 'Back', auction_path(auction: @bid.auction) %>
+<%= link_to t('.back', :default => t("helpers.links.back")),
+              bids_path, :class => 'btn btn-default'  %>
+<%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_bid_path(@bid), :class => 'btn btn-default' %>
+<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              bid_path(@bid),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
