--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,25 +1,40 @@
-<%= form_for(user) do |f| %>
-    <div class="field">
-      <%= f.label :name %>
-      <%= f.text_field :name %>
+<%= form_for @user, :html => { :class => "form-horizontal user" } do |f| %>
+    <div class="form-group">
+      <%= f.label :name, :class => 'control-label col-lg-2' %>
+      <div class="col-lg-10">
+        <%= f.text_field :name, :class => 'form-control' %>
+      </div>
+      <%=f.error_span(:name) %>
+    </div>
+    <div class="form-group">
+      <%= f.label :email, :class => 'control-label col-lg-2' %>
+      <div class="col-lg-10">
+        <%= f.text_field :email, :class => 'form-control' %>
+      </div>
+      <%=f.error_span(:email) %>
+    </div>
+    <div class="form-group">
+      <%= f.label :password, :class => 'control-label col-lg-2' %>
+      <div class="col-lg-10">
+        <%= f.password_field :password, :class => 'form-control' %>
+      </div>
+      <%=f.error_span(:password) %>
+    </div>
+    <div class="form-group">
+      <%= f.label :password_confirmation, :class => 'control-label col-lg-2' %>
+      <div class="col-lg-10">
+        <%= f.password_field :password_confirmation, :class => 'form-control' %>
+      </div>
+      <%=f.error_span(:password_confirmation) %>
     </div>
 
-    <div class="field">
-      <%= f.label :email %>
-      <%= f.text_field :email %>
+
+    <div class="form-group">
+      <div class="col-lg-offset-2 col-lg-10">
+        <%= f.submit nil, :class => 'btn btn-primary' %>
+        <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                    users_path, :class => 'btn btn-default' %>
+      </div>
     </div>
 
-    <div class="field">
-      <%= f.label :password %><br />
-      <%= f.password_field :password %>
-    </div>
-
-    <div class="field">
-      <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation %>
-    </div>
-
-    <div class="actions">
-      <%= f.submit %>
-    </div>
 <% end %>
